ErrorResponseBuilder tested without mocking MessageSource